<resources>
    <string name="app_name">Book-Pitch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="popular_stadium">Sân bóng nổi bật</string>
    <string name="near_stadium">Sân bóng gần bạn</string>
    <string name="see_all">Xem tất cả</string>
    <string name="see_more">Xem thêm</string>

    <string name="next">Tiếp theo</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Bắt đầu</string>

    <string name="slide_1_title">Dễ dàng đặt sân</string>
    <string name="slide_1_desc">Ứng dụng mang đến cho người dùng trải nghiệm dễ dàng nhất khi đặt sân !</string>

    <string name="slide_2_title">Dễ dàng tìm kiếm</string>
    <string name="slide_2_desc">Ứng dụng cho phép người dùng tìm kiếm các sân bóng gần nhất !</string>

    <string name="slide_3_title">Lựa chọn tốt nhất</string>
    <string name="slide_3_desc">Ứng dụng là lựa chọn tốt nhất mang đến cho người dùng trải nghiệm tốt nhất !</string>
    <string name="time">Từ 17h-19h ạ</string>
    <string name="stk">100k STK : 666666666 MB Bank</string>
    <string name="time1">12:03</string>

    <!--    Menu -->
    <string name="home">Trang chủ</string>
    <string name="message">Tin nhắn</string>
    <string name="account">Tài khoản</string>
    <string name="news">Tin tức</string>
    <string name="pitch">Đặt sân</string>

    <!-- Actionbar   -->
    <string name="payment_info">Thông tin thanh toán</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="contact_info">Thông tin liên hệ</string>
    <string name="history_and_booked">Lịch sử đặt sân</string>
    <string name="review">Đánh giá sân bóng</string>
    <string name="favourite">Yêu thích</string>
    <string name="setting">Cài đặt</string>

    <!-- Home   -->
    <string name="placeholder_search">Tìm sân bóng</string>
    <string name="tin_t_c">Tin Tức</string>
    <string name="notification">Thông báo</string>
    <string name="_2h_tr_c">2h trước</string>
    <string name="default_web_client_id">919174305763-3b1somh2siahhdd65caji3t0kg6tcbmk.apps.googleusercontent.com</string>

    <!--    Facebook AppId-->
    <string name="facebook_app_id">436003159111667</string>
    <string name="fb_login_protocol_scheme">fb436003159111667</string>
    <string name="facebook_client_token">8366ffc3868ede24239ae6c571ac57f1</string>

    <string name="search_user">Tìm kiếm người dùng</string>

</resources>