<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home_solid"/>
    <item
        android:id="@+id/listPitchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pitch"
        android:icon="@drawable/pitch"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/messageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/message"
        android:icon="@drawable/message"/>
    <item
        android:id="@+id/newsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/news"
        android:icon="@drawable/news"/>
    <item
        android:id="@+id/accountFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/account"
        android:icon="@drawable/profile"/>
</menu>