<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MessageItemActivity">

    <TextView
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:background="@drawable/previous"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="7dp" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/green"
        android:inputType="text"
        android:text="Cho em hỏi bên mình còn sân 7 không ạ?"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="99dp" />

    <EditText
        android:layout_width="332dp"
        android:layout_height="58dp"

        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/darkGreen"
        android:inputType="text"
        android:text="Mình vui lòng cọc trước 50% tiền sân ạ"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="58dp"

        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/darkGreen"
        android:inputType="text"
        android:text="@string/stk"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="566dp" />

    <EditText
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/green"
        android:inputType="text"
        android:text="@string/time"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="385dp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/darkGreen"
        android:inputType="text"
        android:text="Bên em còn sân 7 từ 17h-22h ạ"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:layout_width="196dp"
        android:layout_height="58dp"
        android:background="@drawable/border_edittext"
        android:backgroundTint="@color/green"
        android:inputType="text"
        android:text="Vậy cho em đặt sân 7"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="296dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:text="Lê Như Nam"
        android:textSize="28dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="197dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:text="Đang hoat động"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <androidx.constraintlayout.utils.widget.ImageFilterView-->
    <!--        android:id="@+id/imageFilterView"-->
    <!--        android:layout_width="54dp"-->
    <!--        android:layout_height="39dp"-->
    <!--        app:srcCompat="@drawable/phone"-->
    <!--        tools:layout_editor_absoluteX="261dp"-->
    <!--        tools:layout_editor_absoluteY="7dp" />-->

    <!--    <androidx.constraintlayout.utils.widget.ImageFilterView-->
    <!--        android:id="@+id/imageFilterView2"-->
    <!--        android:layout_width="80dp"-->
    <!--        android:layout_height="58dp"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_camera"-->
    <!--        tools:layout_editor_absoluteX="315dp"-->
    <!--        tools:layout_editor_absoluteY="0dp" />-->

    <!--    <androidx.constraintlayout.utils.widget.ImageFilterView-->
    <!--        android:id="@+id/imageFilterView3"-->
    <!--        android:layout_width="34dp"-->
    <!--        android:layout_height="44dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.745"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:srcCompat="@android:drawable/ic_btn_speak_now" />-->

    <TextView
        android:id="@+id/textView19"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:text="12:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="71dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:text="@string/time1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:text="12:05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_marginTop="632dp"
        android:text="Đã xem 5 phút trước"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="72dp"
        android:layout_height="64dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="0dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/textEditer"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="Nhập văn bản ..."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="668dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textEditer"
        app:layout_constraintTop_toTopOf="@+id/textEditer"
        app:srcCompat="@android:drawable/ic_menu_send" />

</androidx.constraintlayout.widget.ConstraintLayout>

